@@ -1,8 +1,8 @@
 # FastDoubleParser
 
-This is a Java port of Daniel Lemire's fast_double_parser.
+This is a Java port of Daniel Lemire's fast_float.
 
-https://github.com/lemire/fast_double_parser
+https://github.com/fastfloat/fast_float
 
 Usage:
 
@@ -29,14 +29,14 @@ How to run the performance tests on a Mac:
 2. Install the XCode command line tools from Apple.
 3. Open the Terminal and execute the following commands:
 
-Command sequence for Java 17 or higher:
+Command sequence for Java 18 or higher:
 
      git clone https://github.com/wrandelshofer/FastDoubleParser.git
      cd FastDoubleParser 
-     javac -d out -encoding utf8 --module-source-path src/main/java --module ch.randelshofer.fastdoubleparser    
-     javac -d out -encoding utf8 -p out --module-source-path FastDoubleParserDemo/src/main/java --module ch.randelshofer.fastdoubleparserdemo
-     java -p out -m ch.randelshofer.fastdoubleparserdemo/ch.randelshofer.fastdoubleparserdemo.Main  
-     java -p out -m ch.randelshofer.fastdoubleparserdemo/ch.randelshofer.fastdoubleparserdemo.Main data/canada.txt   
+     javac --enable-preview -source 18 -d out -encoding utf8 --module-source-path src/main/java --module ch.randelshofer.fastdoubleparser    
+     javac --enable-preview -source 18 -d out -encoding utf8 -p out --module-source-path FastDoubleParserDemo/src/main/java --module ch.randelshofer.fastdoubleparserdemo
+     java --enable-preview -p out -m ch.randelshofer.fastdoubleparserdemo/ch.randelshofer.fastdoubleparserdemo.Main  
+     java --enable-preview -p out -m ch.randelshofer.fastdoubleparserdemo/ch.randelshofer.fastdoubleparserdemo.Main data/canada.txt   
 
 Command sequence for Java 8 or higher:
 
@@ -52,74 +52,104 @@ Command sequence for Java 8 or higher:
 On my Mac mini (2018) I get the results shown below. The speedup factor with respect to `Double.parseDouble` ranges from
 0.5 to 6 depending on the shape of the input data. You can expect a speedup factor of 4 for common input data shapes.
 
-    WARNING: Using incubator modules: jdk.incubator.vector
-    Intel(R) Core(TM) i7-8700B CPU @ 3.20GHz SIMD-256
-    x86_64. Mac OS X. 12.4. 12
-    OpenJDK 64-Bit Server VM. Oracle Corporation. 19-ea+33-2224
+    Intel(R) Core(TM) i7-8700B CPU @ 3.20GHz
+    x86_64, Mac OS X, 12.5.1, 12
+    OpenJDK 64-Bit Server VM, Oracle Corporation, 19+36-2238
     -XX:+UnlockExperimentalVMOptions
+    Parsing random doubles in the range [0,1).
+    [...]
+    Measuring: Trying to reach a confidence level of 99.8 % which only deviates by 1 % from the average measured duration.
+    [...]
+    Measurement results:
+    java.lang.Double            :    82.54 MB/s (+/- 4.0 %)     4.74 Mfloat/s     211.07 ns/f
+    java.lang.Float             :    87.81 MB/s (+/- 3.5 %)     5.04 Mfloat/s     198.39 ns/f
+    java.math.BigDecimal        :   162.87 MB/s (+/- 8.3 %)     9.35 Mfloat/s     106.96 ns/f
+    JavaDoubleParser String     :   478.07 MB/s (+/-17.6 %)    27.44 Mfloat/s      36.44 ns/f
+    JavaDoubleParser char[]     :   514.80 MB/s (+/-12.8 %)    29.55 Mfloat/s      33.84 ns/f
+    JavaDoubleParser byte[]     :   592.20 MB/s (+/-10.3 %)    33.99 Mfloat/s      29.42 ns/f
+    JsonDoubleParser String     :   453.11 MB/s (+/-17.4 %)    26.01 Mfloat/s      38.45 ns/f
+    JsonDoubleParser char[]     :   552.69 MB/s (+/-14.5 %)    31.73 Mfloat/s      31.52 ns/f
+    JsonDoubleParser byte[]     :   627.73 MB/s (+/-11.2 %)    36.03 Mfloat/s      27.75 ns/f
+    JavaFloatParser  String     :   462.63 MB/s (+/-17.8 %)    26.56 Mfloat/s      37.66 ns/f
+    JavaFloatParser  char[]     :   475.10 MB/s (+/-11.3 %)    27.27 Mfloat/s      36.67 ns/f
+    JavaFloatParser  byte[]     :   612.48 MB/s (+/-12.1 %)    35.16 Mfloat/s      28.44 ns/f
+    JavaBigDecimalParser String :   516.93 MB/s (+/-20.0 %)    29.67 Mfloat/s      33.70 ns/f
+    JavaBigDecimalParser char[] :   563.40 MB/s (+/-15.1 %)    32.34 Mfloat/s      30.92 ns/f
+    JavaBigDecimalParser byte[] :   655.11 MB/s (+/-15.1 %)    37.60 Mfloat/s      26.59 ns/f
     
-    parsing random doubles in the range [0.1)
-    Trying to reach a confidence level of 99.8 % which only deviates by 1 % from the average measured duration.
-    FastDouble String :   573.48 MB/s (+/- 6.3 %)    32.92 Mfloat/s      30.38 ns/f
-    FastDouble char[] :   606.53 MB/s (+/- 5.9 %)    34.82 Mfloat/s      28.72 ns/f
-    FastDouble byte[] :   689.95 MB/s (+/- 4.7 %)    39.60 Mfloat/s      25.25 ns/f
-    Double            :    95.66 MB/s (+/- 2.3 %)     5.49 Mfloat/s     182.12 ns/f
-    FastFloat  String :   533.88 MB/s (+/- 2.3 %)    30.65 Mfloat/s      32.63 ns/f
-    FastFloat  char[] :   631.52 MB/s (+/- 4.1 %)    36.25 Mfloat/s      27.59 ns/f
-    FastFloat  byte[] :   689.57 MB/s (+/- 4.9 %)    39.58 Mfloat/s      25.26 ns/f
-    Float             :   101.22 MB/s (+/- 2.6 %)     5.81 Mfloat/s     172.11 ns/f
+    Speedup JavaDoubleParser String     vs java.lang.Double    : 5.79
+    Speedup JavaDoubleParser char[]     vs java.lang.Double    : 6.24
+    Speedup JavaDoubleParser byte[]     vs java.lang.Double    : 7.18
+    Speedup JsonDoubleParser String     vs java.lang.Double    : 5.49
+    Speedup JsonDoubleParser char[]     vs java.lang.Double    : 6.70
+    Speedup JsonDoubleParser byte[]     vs java.lang.Double    : 7.61
+    Speedup JavaFloatParser  String     vs java.lang.Float     : 5.27
+    Speedup JavaFloatParser  char[]     vs java.lang.Float     : 5.41
+    Speedup JavaFloatParser  byte[]     vs java.lang.Float     : 6.98
+    Speedup JavaBigDecimalParser String vs java.math.BigDecimal: 3.17
+    Speedup JavaBigDecimalParser char[] vs java.math.BigDecimal: 3.46
+    Speedup JavaBigDecimalParser byte[] vs java.math.BigDecimal: 4.02
+    You can also provide a filename: it should contain one string per line corresponding to a number.
     
-    Speedup FastDouble String vs Double: 6.00
-    Speedup FastDouble char[] vs Double: 6.34
-    Speedup FastDouble byte[] vs Double: 7.21
-    Speedup FastFloat  String vs Double: 5.58
-    Speedup FastFloat  char[] vs Double: 6.60
-    Speedup FastFloat  byte[] vs Double: 7.21
-    Speedup Float             vs Double: 1.06
+    Process finished with exit code 0
+
 
 '
 
     parsing numbers in file /Users/Shared/Developer/Java/FastDoubleParser/github/FastDoubleParser/data/canada.txt
     read 111126 lines
-    Trying to reach a confidence level of 99.8 % which only deviates by 1 % from the average measured duration.
-    FastDouble String :   432.57 MB/s (+/- 3.4 %)    24.86 Mfloat/s      40.23 ns/f
-    FastDouble char[] :   550.44 MB/s (+/- 3.5 %)    31.63 Mfloat/s      31.61 ns/f
-    FastDouble byte[] :   578.14 MB/s (+/- 3.1 %)    33.22 Mfloat/s      30.10 ns/f
-    Double            :    82.24 MB/s (+/- 3.0 %)     4.73 Mfloat/s     211.60 ns/f
-    FastFloat  String :   430.42 MB/s (+/- 2.9 %)    24.73 Mfloat/s      40.43 ns/f
-    FastFloat  char[] :   547.38 MB/s (+/- 4.7 %)    31.46 Mfloat/s      31.79 ns/f
-    FastFloat  byte[] :   590.19 MB/s (+/- 4.9 %)    33.92 Mfloat/s      29.48 ns/f
-    Float             :   101.20 MB/s (+/- 2.2 %)     5.82 Mfloat/s     171.95 ns/f
-
-    Speedup FastDouble String vs Double: 5.26
-    Speedup FastDouble char[] vs Double: 6.69
-    Speedup FastDouble byte[] vs Double: 7.03
-    Speedup FastFloat  String vs Double: 5.23
-    Speedup FastFloat  char[] vs Double: 6.66
-    Speedup FastFloat  byte[] vs Double: 7.18
-    Speedup Float             vs Double: 1.23
+    [...]
+    Measurement results:
+    java.lang.Double            :    74.87 MB/s (+/- 5.3 %)     4.30 Mfloat/s     232.42 ns/f
+    java.lang.Float             :    88.38 MB/s (+/- 4.2 %)     5.08 Mfloat/s     196.89 ns/f
+    java.math.BigDecimal        :   238.67 MB/s (+/- 8.6 %)    13.72 Mfloat/s      72.91 ns/f
+    JavaDoubleParser String     :   310.43 MB/s (+/-11.7 %)    17.84 Mfloat/s      56.06 ns/f
+    JavaDoubleParser char[]     :   395.27 MB/s (+/-15.7 %)    22.71 Mfloat/s      44.02 ns/f
+    JavaDoubleParser byte[]     :   469.50 MB/s (+/-15.7 %)    26.98 Mfloat/s      37.06 ns/f
+    JsonDoubleParser String     :   383.39 MB/s (+/-11.2 %)    22.03 Mfloat/s      45.39 ns/f
+    JsonDoubleParser char[]     :   473.21 MB/s (+/-10.7 %)    27.19 Mfloat/s      36.77 ns/f
+    JsonDoubleParser byte[]     :   571.90 MB/s (+/- 7.7 %)    32.87 Mfloat/s      30.43 ns/f
+    JavaFloatParser  String     :   407.16 MB/s (+/- 9.5 %)    23.40 Mfloat/s      42.74 ns/f
+    JavaFloatParser  char[]     :   543.53 MB/s (+/- 9.7 %)    31.24 Mfloat/s      32.02 ns/f
+    JavaFloatParser  byte[]     :   603.61 MB/s (+/- 8.5 %)    34.69 Mfloat/s      28.83 ns/f
+    JavaBigDecimalParser String :   435.04 MB/s (+/- 9.9 %)    25.00 Mfloat/s      40.00 ns/f
+    JavaBigDecimalParser char[] :   561.30 MB/s (+/-10.2 %)    32.26 Mfloat/s      31.00 ns/f
+    JavaBigDecimalParser byte[] :   641.92 MB/s (+/- 8.5 %)    36.89 Mfloat/s      27.11 ns/f
+    
+    Speedup JavaDoubleParser String     vs java.lang.Double    : 4.15
+    Speedup JavaDoubleParser char[]     vs java.lang.Double    : 5.28
+    Speedup JavaDoubleParser byte[]     vs java.lang.Double    : 6.27
+    Speedup JsonDoubleParser String     vs java.lang.Double    : 5.12
+    Speedup JsonDoubleParser char[]     vs java.lang.Double    : 6.32
+    Speedup JsonDoubleParser byte[]     vs java.lang.Double    : 7.64
+    Speedup JavaFloatParser  String     vs java.lang.Float     : 4.61
+    Speedup JavaFloatParser  char[]     vs java.lang.Float     : 6.15
+    Speedup JavaFloatParser  byte[]     vs java.lang.Float     : 6.83
+    Speedup JavaBigDecimalParser String vs java.math.BigDecimal: 1.82
+    Speedup JavaBigDecimalParser char[] vs java.math.BigDecimal: 2.35
+    Speedup JavaBigDecimalParser byte[] vs java.math.BigDecimal: 2.69
 
 FastDoubleParser also speeds up parsing of hexadecimal float literals:
 
     parsing numbers in file /Users/Shared/Developer/Java/FastDoubleParser/github/FastDoubleParser/data/canada_hex.txt
     read 111126 lines
-    Trying to reach a confidence level of 99.8 % which only deviates by 1 % from the average measured duration.
-    FastDouble String :   406.00 MB/s (+/- 8.9 %)    22.26 Mfloat/s      44.92 ns/f
-    FastDouble char[] :   631.42 MB/s (+/-11.6 %)    34.62 Mfloat/s      28.88 ns/f
-    FastDouble byte[] :   618.98 MB/s (+/- 2.0 %)    33.94 Mfloat/s      29.46 ns/f
-    Double            :    52.61 MB/s (+/- 7.3 %)     2.88 Mfloat/s     346.70 ns/f
-    FastFloat  String :   410.53 MB/s (+/-10.2 %)    22.51 Mfloat/s      44.43 ns/f
-    FastFloat  char[] :   628.19 MB/s (+/-12.0 %)    34.44 Mfloat/s      29.03 ns/f
-    FastFloat  byte[] :   615.30 MB/s (+/- 8.4 %)    33.74 Mfloat/s      29.64 ns/f
-    Float             :    53.78 MB/s (+/- 4.0 %)     2.95 Mfloat/s     339.15 ns/f
+    [...]
+    Measurement results:
+    java.lang.Double            :    38.45 MB/s (+/- 5.1 %)     2.11 Mfloat/s     474.29 ns/f
+    java.lang.Float             :    39.15 MB/s (+/- 4.2 %)     2.15 Mfloat/s     465.82 ns/f
+    JavaDoubleParser String     :   407.92 MB/s (+/- 8.1 %)    22.37 Mfloat/s      44.71 ns/f
+    JavaDoubleParser char[]     :   605.77 MB/s (+/- 9.0 %)    33.21 Mfloat/s      30.11 ns/f
+    JavaDoubleParser byte[]     :   640.55 MB/s (+/- 7.7 %)    35.12 Mfloat/s      28.47 ns/f
+    JavaFloatParser  String     :   389.53 MB/s (+/- 7.0 %)    21.36 Mfloat/s      46.82 ns/f
+    JavaFloatParser  char[]     :   606.53 MB/s (+/- 7.5 %)    33.26 Mfloat/s      30.07 ns/f
+    JavaFloatParser  byte[]     :   636.46 MB/s (+/- 7.1 %)    34.90 Mfloat/s      28.66 ns/f
     
-    Speedup FastDouble String vs Double: 7.72
-    Speedup FastDouble char[] vs Double: 12.00
-    Speedup FastDouble byte[] vs Double: 11.77
-    Speedup FastFloat  String vs Double: 7.80
-    Speedup FastFloat  char[] vs Double: 11.94
-    Speedup FastFloat  byte[] vs Double: 11.70
-    Speedup Float             vs Double: 1.02
+    Speedup JavaDoubleParser String     vs java.lang.Double    : 10.61
+    Speedup JavaDoubleParser char[]     vs java.lang.Double    : 15.75
+    Speedup JavaDoubleParser byte[]     vs java.lang.Double    : 16.66
+    Speedup JavaFloatParser  String     vs java.lang.Float     : 9.95
+    Speedup JavaFloatParser  char[]     vs java.lang.Float     : 15.49
+    Speedup JavaFloatParser  byte[]     vs java.lang.Float     : 16.26
 
 ## Comparison of JDK versions
 
@@ -127,12 +157,12 @@ The Y-axis shows Mfloat/s.
 
 ![ComparisonOfJvmVersions.png](ComparisonOfJvmVersions.png)
 
-|Method            |1.8.0_281|11.0.8|18.0.1.1|19-ea|17.0.3graalvm|
-|-------------------|---|---|---|---|---|
-|Double            |4.86|5.34|5.09|5.28|6.96|
-|FastDouble String |20.30|27.83|31.18|32.59|32.74|
-|FastDouble char[] |30.60|30.68|33.58|37.20|34.32|
-|FastDouble byte[] |31.29|35.61|38.24|39.67|40.21|
+| Method              | 1.8.0_281  | 11.0.8 | 18.0.1.1 | 19-ea | 20-ea | 17.0.3graalvm |
+|---------------------|------------|--------|----------|-------|-------|---------------|
+| Double              | 4.86       | 5.34   | 5.09     | 5.28  | 4.81  | 6.96          |
+| FastDouble String   | 20.30      | 27.83  | 31.18    | 32.59 | 26.15 | 32.74         |
+| FastDouble char[]   | 30.60      | 30.68  | 33.58    | 37.20 | 29.95 | 34.32         |
+| FastDouble byte[]   | 31.29      | 35.61  | 38.24    | 39.67 | 34.23 | 40.21         |
 
 ## Comparison with C version
 
@@ -156,11 +186,11 @@ on the same computer:
     abseil                                  :   467.27 MB/s (+/- 9.0 %)    22.27 Mfloat/s      44.90 ns/f 
     fastfloat                               :   880.79 MB/s (+/- 6.6 %)    41.98 Mfloat/s      23.82 ns/f 
 
-    OpenJDK 19-ea+33-2224
-    FastDouble String                       :   566.18 MB/s (+/- 1.2 %)    32.50 Mfloat/s      30.77 ns/f
-    FastDouble char[]                       :   606.77 MB/s (+/- 3.6 %)    34.83 Mfloat/s      28.71 ns/f
-    FastDouble byte[]                       :   692.78 MB/s (+/- 2.2 %)    39.77 Mfloat/s      25.14 ns/f
-    Double                                  :    98.41 MB/s (+/- 2.6 %)     5.65 Mfloat/s     176.99 ns/f
+    OpenJDK 19+36-2238
+    java.lang.Double                        :    88.51 MB/s (+/- 5.5 %)     5.08 Mfloat/s     196.86 ns/f
+    JavaDoubleParser String                 :   508.13 MB/s (+/-19.0 %)    29.16 Mfloat/s      34.29 ns/f
+    JavaDoubleParser char[]                 :   582.40 MB/s (+/-15.0 %)    33.43 Mfloat/s      29.92 ns/f
+    JavaDoubleParser byte[]                 :   657.50 MB/s (+/-13.4 %)    37.74 Mfloat/s      26.50 ns/f
 
 '
 
@@ -173,8 +203,8 @@ on the same computer:
     abseil                                  :   411.11 MB/s (+/- 7.3 %)    23.63 Mfloat/s      42.33 ns/f 
     fastfloat                               :   741.32 MB/s (+/- 5.3 %)    42.60 Mfloat/s      23.47 ns/f 
 
-    OpenJDK 19-ea+33-2224
-    FastDouble String                       :   430.24 MB/s (+/- 0.8 %)    24.72 Mfloat/s      40.45 ns/f
-    FastDouble char[]                       :   512.85 MB/s (+/- 7.0 %)    29.47 Mfloat/s      33.93 ns/f
-    FastDouble byte[]                       :   515.65 MB/s (+/- 4.2 %)    29.63 Mfloat/s      33.75 ns/f
-    Double                                  :    87.33 MB/s (+/- 4.0 %)     5.02 Mfloat/s     199.27 ns/f
+    OpenJDK 19+36-2238
+    java.lang.Double                        :    87.50 MB/s (+/- 4.0 %)     5.03 Mfloat/s     198.88 ns/f
+    JavaDoubleParser String                 :   446.05 MB/s (+/- 9.5 %)    25.63 Mfloat/s      39.01 ns/f
+    JavaDoubleParser char[]                 :   537.01 MB/s (+/- 9.1 %)    30.86 Mfloat/s      32.40 ns/f
+    JavaDoubleParser byte[]                 :   582.76 MB/s (+/- 2.3 %)    33.49 Mfloat/s      29.86 ns/f
